# micro1-as

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: ubuntu.yml
docs/: README.md  lexer.md  parser.md  symbol.md
hooks/: pre-commit
include/: instruction.h  lexer.h  micro1.h  output.h  parser.h  token.h  version.h
include/micro1-as/: backend.h  instruction.h  lexer.h  micro1.h  output.h  parser.h  symbol.h  token.h  version.h
script/: build.sh  setup-hooks.sh  systemtest.sh  unittest.sh
src/: backend.cc  instruction.cc  lexer.cc  main.cc  output.cc  parser.cc  symbol.cc  version.cc
test/: test_instruction.cc
test/input/: input_for_lexer_COLON.txt  input_for_lexer_COMMA.txt  input_for_lexer_DQUOTE.txt  input_for_lexer_SIGN.txt  input_for_parser_GROUP2.asm  input_for_parser_GROUP3.asm  input_for_parser_GROUP6.asm  input_for_parser_GROUP8.asm  input_for_parser_GROUP9.asm
test/src/: test_instruction.cc  test_lexer.cc  test_parser.cc
test/systemtest/expect/: GROUP1.b  GROUP2.b  GROUP3.b  GROUP4.b  GROUP5.b  GROUP6.b  GROUP7.b  GROUP8.b  GROUP9.b
test/systemtest/input/: GROUP5.asm  GROUP7.asm  GROUP9.asm
test/unittest/input/: input_for_lexer_CHARS.in  input_for_lexer_INTEGER.in  input_for_lexer_INVALID.in  input_for_lexer_LPAREN.in  input_for_lexer_RPAREN.in  input_for_lexer_STAR.in  input_for_lexer_STRING.in  input_for_parser_GROUP1.asm  input_for_parser_GROUP4.asm
test/unittest/src/: test_lexer.cc  test_parser.cc
